--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
     <title>Website Name</title>
-    <meta content="Clap" property="og:title">
-  <meta content="Clap" property="og:description">
+    <meta content="Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap " property="og:title">
+  <meta content="Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap " property="og:description">
     <meta content="https://embed.com/this-is-the-site-url" property="og:url">
     <meta content="https://i.imgur.com/HmxigYB.gif" property="og:image">
     <meta content="#43B581" data-react-helmet="true" name="theme-color">
