--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
     <title>Website Name</title>
-    <meta content="Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap " property="og:title">
-  <meta content="Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap Clap " property="og:description">
+    <meta content="ok" property="og:title">
+  <meta content="ok" property="og:description">
     <meta content="https://embed.com/this-is-the-site-url" property="og:url">
-    <meta content="https://i.imgur.com/HmxigYB.gif" property="og:image">
+    <meta content="https://cdn.discordapp.com/attachments/358435848888254464/823865471933218816/WhittyCrazy.png" property="og:image">
     <meta content="#43B581" data-react-helmet="true" name="theme-color">
